--- a/scss/_normal.scss
+++ b/scss/_normal.scss
@@ -2,20 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body{
-    background-image: url(../img/png/Bg.png) ;
-    background-repeat: no-repeat;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    overflow: hidden;
+    font-family: "Roboto", sans-serif;
 }
 
 .container{
-    max-width: 1350px;
+    max-width: 1450px;
     width: 100%;
     margin: 0 auto ;
 }
