--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -54,6 +54,18 @@ header {
         color: #fff;
         font-size: 50px;
       }
+      .hr{
+        margin-top: 8rem;
+        color: #fff;
+        width: 43%;
+        margin-bottom: 1rem;
+      }
+      .header_div{
+        color: #fff;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+      }
     }
   }
 }
