--- a/style/style.css
+++ b/style/style.css
@@ -77,4 +77,92 @@ header .hero .hero_box .header_div {
   gap: 1rem;
 }
 
+main .card_parent {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+main .card_parent .card_box {
+  background-color: #c9a3a4;
+  width: 600px;
+  max-width: 600px;
+  padding: 3rem;
+  margin-left: -2.4rem;
+  padding-left: 5rem;
+}
+main .card_parent .card_box h2 {
+  color: #fff;
+  font-size: 48px;
+  font-weight: 500;
+}
+main .card_parent .card_box .hr {
+  margin-top: 1rem;
+  color: #fff;
+  width: 83%;
+  margin-bottom: 1rem;
+  height: 2px;
+  border: none;
+  background-color: #fff;
+  margin-bottom: 2rem;
+}
+main .card_parent .card_box h3 {
+  font-size: 25px;
+  color: #fff;
+}
+main .card_parent .card_box2 {
+  background-color: #a7ceff;
+  width: 600px;
+  max-width: 650px;
+  padding: 3rem;
+  padding-left: 5rem;
+  margin-left: -2rem;
+}
+main .card_parent .card_box2 h2 {
+  color: #fff;
+  font-size: 48px;
+  font-weight: 500;
+}
+main .card_parent .card_box2 .hr {
+  margin-top: 1rem;
+  color: #fff;
+  width: 83%;
+  margin-bottom: 1rem;
+  height: 2px;
+  border: none;
+  background-color: #fff;
+  margin-bottom: 2rem;
+}
+main .card_parent .card_box2 h3 {
+  margin-top: 3.8rem;
+  font-size: 25px;
+  color: #fff;
+}
+main .card_parent .card_box3 {
+  background-color: #a3c9ba;
+  width: 550px;
+  max-width: 600px;
+  padding: 3rem;
+  margin-right: -2.2rem;
+  padding-left: 5rem;
+}
+main .card_parent .card_box3 h2 {
+  color: #fff;
+  font-size: 48px;
+  font-weight: 500;
+}
+main .card_parent .card_box3 .hr {
+  margin-top: 1rem;
+  color: #fff;
+  width: 83%;
+  margin-bottom: 1rem;
+  height: 2px;
+  border: none;
+  background-color: #fff;
+  margin-bottom: 2rem;
+}
+main .card_parent .card_box3 h3 {
+  font-size: 25px;
+  color: #fff;
+}
+
 /*# sourceMappingURL=style.css.map */
