--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -87,4 +87,41 @@ main {
       }
     }
   }
+  .create{
+    background-image: url(./../img/png/Rectangle\ \(4\).png);
+    background-repeat: no-repeat;
+    object-fit: cover;
+    width: 100%;
+    height: 620px;
+    background-size: 100rem;
+    background-position: 10% 49%;
+    padding: 3rem;
+    .credit_box{
+      h1{
+        font-size: 50px;
+        color: #fff;
+        font-weight: 500;
+        width: 25%;
+      }
+        .hr{
+          margin-top: 2rem;
+          height: 2px;
+          margin-bottom: 2rem;
+          border: none;
+          background-color: #fff;
+          width: 30%;
+        }
+        p{
+          font-size: 19px;
+          color: #fff;
+          width: 25%;
+          line-height: 1.5;
+        }
+        h3{
+          color: #fff;
+          margin-top: 12rem;
+          font-size: 25px;
+        }
+    }
+  }
 }
