--- a/style/style.css
+++ b/style/style.css
@@ -164,5 +164,40 @@ main .card_parent .card_box3 h3 {
   font-size: 25px;
   color: #fff;
 }
+main .create {
+  background-image: url(./../img/png/Rectangle\ \(4\).png);
+  background-repeat: no-repeat;
+  object-fit: cover;
+  width: 100%;
+  height: 620px;
+  background-size: 100rem;
+  background-position: 10% 49%;
+  padding: 3rem;
+}
+main .create .credit_box h1 {
+  font-size: 50px;
+  color: #fff;
+  font-weight: 500;
+  width: 25%;
+}
+main .create .credit_box .hr {
+  margin-top: 2rem;
+  height: 2px;
+  margin-bottom: 2rem;
+  border: none;
+  background-color: #fff;
+  width: 30%;
+}
+main .create .credit_box p {
+  font-size: 19px;
+  color: #fff;
+  width: 25%;
+  line-height: 1.5;
+}
+main .create .credit_box h3 {
+  color: #fff;
+  margin-top: 12rem;
+  font-size: 25px;
+}
 
 /*# sourceMappingURL=style.css.map */
